Bug 65060 - [5 Regression] r220696 breaks bootstrap on Linux/x86-32
Summary: [5 Regression] r220696 breaks bootstrap on Linux/x86-32
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 5.0
: P1 normal
Target Milestone: ---
Assignee: Jeffrey A. Law
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-13 22:59 UTC by H.J. Lu
Modified: 2015-02-13 23:54 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2015-02-13 22:59:33 UTC
On Linux/x86-32, r220696 gave

make[6]: Leaving directory `/export/gnu/import/git/gcc-test-ia32corei7/bld'
Comparing stages 2 and 3
warning: gcc/cc1obj-checksum.o differs
warning: gcc/cc1plus-checksum.o differs
warning: gcc/cc1-checksum.o differs
Bootstrap comparison failure!
gcc/gimple-fold.o differs
gcc/tree-ssa-pre.o differs
gcc/omp-low.o differs
gcc/i386.o differs
gcc/tree-ssa-sccvn.o differs
gcc/tree-ssa-threadupdate.o differs
gcc/tree-ssa-uninit.o differs
gcc/cfgexpand.o differs
gcc/objc/objc-act.o differs
gcc/tree-ssa-operands.o differs
gcc/sel-sched-ir.o differs
gcc/tree-into-ssa.o differs
gcc/java/expr.o differs
gcc/ree.o differs
gcc/sanopt.o differs
gcc/sese.o differs
gcc/cfgrtl.o differs
gcc/reg-stack.o differs
gcc/ira-emit.o differs
gcc/tree-ssa-loop-im.o differs
gcc/tree-emutls.o differs
gcc/tree-ssa-reassoc.o differs
gcc/c/c-parser.o differs
gcc/c/c-typeck.o differs
gcc/gimplify.o differs
gcc/tree-ssa-loop-ivopts.o differs
gcc/tree-if-conv.o differs
gcc/lto-cgraph.o differs
gcc/cfgloopanal.o differs
gcc/tree-cfgcleanup.o differs
gcc/tree-outof-ssa.o differs
gcc/ipa-cp.o differs
gcc/lower-subreg.o differs
gcc/tree-ssa-loop-unswitch.o differs
gcc/dojump.o differs
gcc/ipa-polymorphic-call.o differs
gcc/function.o differs
gcc/ubsan.o differs
gcc/cfganal.o differs
gcc/tree-ssa-live.o differs
gcc/fwprop.o differs
gcc/tree-complex.o differs
gcc/tree-vect-stmts.o differs
gcc/tree-ssa-structalias.o differs
gcc/build/genautomata.o differs
gcc/build/genpreds.o differs
gcc/build/genmatch.o differs
gcc/final.o differs
gcc/ipa-utils.o differs
gcc/tree-vect-slp.o differs
gcc/rtlanal.o differs
gcc/lto/lto-partition.o differs
gcc/c-family/array-notation-common.o differs
gcc/ipa-inline.o differs
gcc/tree-loop-distribution.o differs
gcc/tree-ssa-ccp.o differs
gcc/wide-int.o differs
gcc/bb-reorder.o differs
gcc/tree-object-size.o differs
gcc/tree-ssa-loop-niter.o differs
gcc/tree-predcom.o differs
gcc/tree-ssa-ter.o differs
gcc/cp/init.o differs
gcc/cp/decl.o differs
gcc/cp/pt.o differs
gcc/cp/class.o differs
gcc/cp/name-lookup.o differs
gcc/cp/error.o differs
gcc/cp/vtable-class-hierarchy.o differs
gcc/tree-ssa-loop-ch.o differs
gcc/tree-ssa-threadedge.o differs
gcc/ipa-icf.o differs
gcc/tree-inline.o differs
libcpp/macro.o differs
make[5]: *** [compare] Error 1

when configured with

--with-arch=corei7 --with-cpu=corei7 --prefix=/usr/5.0.0 --enable-clocale=gnu --with-system-zlib --enable-shared --with-demangler-in-ld i686-linux --with-fpmath=sse --enable-languages=c,c++,fortran,java,lto,objc
Comment 1 Jeffrey A. Law 2015-02-13 23:54:25 UTC
Patch reverted.  Will investigate more deeply next week.
Comment 2 Jeffrey A. Law 2015-02-13 23:54:26 UTC
Author: law
Date: Fri Feb 13 23:53:54 2015
New Revision: 220701

URL: https://gcc.gnu.org/viewcvs?rev=220701&root=gcc&view=rev
Log:
       PR bootstrap/65060
        Revert my change for tree-optimization/64823.

Removed:
    trunk/gcc/testsuite/gcc.dg/uninit-20.c
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/tree-ssa-threadedge.c
    trunk/gcc/tree-vrp.c