       PR bootstrap/65060         Revert my change for tree-optimization/64823.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@220701 138bc75d-0d04-0410-961f-82ee72b054a4